--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                             <li class="nav-item">
                                 <a class="nav-link links--final" aria-current="page" href="pages/tickets.html">Comprar tickets</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link links--final" aria-current="page" href="pages/login.php">Iniciar Sesión</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
